#################################################################
#
#   FALCON - The Falcon Programming Language.
#   FILE: /modules/CMakeLists.txt
#
#   CMake build system list for modules
#   -------------------------------------------------------------------
#   Author: Giancarlo Niccolai
#   Begin: Wed, 02 Jul 2014 23:02:17 +0200
#
#   -------------------------------------------------------------------
#   (C) Copyright 2014: the FALCON developers (see list in AUTHORS file)
#
#   See LICENSE file for licensing details.
#   
#################################################################

add_subdirectory(falcon)
add_subdirectory(native)
